[package]
name = "google_token_provider"
version = "0.1.0"
authors = ["Justin Starry <jstarry@users.noreply.github.com>"]
edition = "2018"

[lib]

[dependencies]
failure = "0.1"
jsonwebtoken = "5.0"
openssl = "0.10"
reqwest = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
